# ra_pst_py

./: .gitignore  README.md  branch_raw.xml  checks.ipynb  cp_rep_test.json  cp_rep_test_all.json  cp_rep_test_long.json  evaluation.ipynb  example.py  gen_tester.py  ilp_vs_brute_comparison.py  info.txt  json.test  makespan_def_entropy.pgf  process.xml  pyproject.toml  requirements.txt  result.json  test.json  test2.xml  use_cases.py  versions.py
evaluation/paper_process_first_invalids/: all_instance_cp.json  heuristic.json  single_instance_cp.json  single_instance_cp_warm.json
evaluation/paper_process_offer_resources_close_maxima/: all_instance_cp.json  heuristic.json  single_instance_cp.json  single_instance_cp_warm.json
evaluation/paper_process_offer_resources_heterogen/: all_instance_cp.json  (+3 more)
example_data/: test_resource.xml
gen_test/: test_config.json  test_config.xml
miscellaneous/: checks.ipynb  cp_alt_try.py  ilp_vs_brute_comparison.py
src/: __init__.py  builder.py  core.py  file_parser.py  graphix.py
test_instances/: instance_generator_process_short.xml  instance_generator_process_shortest.xml  instance_generator_resources.xml  new_generator_resources.xml  new_resources.xml  offer_resources_close_maxima.xml  offer_resources_heterogen.xml  offer_resources_many_invalid_branches.xml  offer_resources_many_invalid_branches_sched.xml  offer_resources_plain_fully_synthetic.xml  offer_resources_plain_fully_synthetic_small.xml  paper_process.xml  paper_process_clean.xml  paper_process_first_4.xml  paper_process_short.xml  paper_process_shorter.xml  resources_paper_process_short.xml
tests/: test_brute_force.py  test_builder.py  test_core.py  test_cp.py  test_evaluation_equality.py  test_heuristic.py  test_instance.py  test_simulator.py  test_use_cases.py
tmp/: process.pkl  process.xml  resources.xml
(+722 files in other folders)
